# OpenCL-Level-Set-Segmentation

./: .gitmodules  CMakeLists.txt  README.md  kernels.cl  main.cpp
example_data/: example.mhd  mr_brain.mhd
